# BiomechanicsTools

./: .gitmodules  README.md  helical.m  transformPoint.m  transformVector.m
BoneModellingToolbox/: BoneModellingREADME.txt  CoM_iv.m  convertRTp_T.m  convertWRL2IV_v2.m  dicom2tif.m  i_CoM_iv.m  i_origin_iv.m  mass_properties.m  partialVolume3DSurfaceViz.m  patch2iv.m  read_vrml_fast.m  surface_area_iv.m  volume_iv.m
GeneralFunctions/: FourierAnalysis.m  LowPassButterworth.m  UDDeformablePower.m  adaptiveLowPassButterworth.m  calculateVelocity.m  createCTofDragonPlate.m  darken.m  desktop.ini  diffn.m  filterTransforms.m  findGroupsOfLogicals.m  function_template.m  greater.m  interpolateNaN.m  kmeansSortDepth.m  lesser.m  lighten.m  linkFigureAxes.m  makeNewFunction.m  makeRelativePath.m  movingaverage.m  nancumtrapz.m  normaliseNaN.m  triangleArea3D.m  vectorCoding.m  vectorCodingGraphs.m
Geometry/: closestPointonPlanealongVector.m  closestPointonVector.m  closestPointsBtw2Lines.m  curvature2D.m  distBtwPoints3xN.m  lineLength.m  makeSkewMatrix.m  norm3d.m  pointsToBarycentric.m  vecProjOn2VecPlane.m
MeshHelp/: PointToPlaneDistance.m  calculateMeshCentroidsAndNormals.m  calculateSegIVindices.m  optimizeCongruence.m  (+5 more)
MeshHelp/CPD2/: CMakeLists.txt  chrisnotes.txt
MeshHelp/CPD2/core/: CMakeLists.txt
MeshHelp/CPD2/core/FGT/: CMakeLists.txt  fgt_model.c  fgt_model.mexw64  fgt_predict.c  fgt_predict.mexw64
MeshHelp/CPD2/core/mex/: CMakeLists.txt  cpd_P.mexw64  cpd_Pappmex.mexw64  cpd_Pcorrespondence.mexw64
MeshHelp/CPD2/examples/: cpd_rigid_example1.m
(+138 files in other folders)
